--- a/T2/SPRINT_1/tfg/src/styles/layout.css
+++ b/T2/SPRINT_1/tfg/src/styles/layout.css
@@ -42,6 +42,8 @@ a:hover {
   position: sticky;
   top: 0;
   z-index: 1000;
+  width: 100%;
+  box-sizing: content-box;
 }
 
 .brand-logo {
@@ -116,6 +118,15 @@ a:hover {
   color: var(--footer-text-color);
   padding: 30px 20px;
   text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: -165px;
+  box-sizing: content-box;
+}
+
+html{
+  min-height: 82%;
+  position: relative;
 }
 
 .footer-links {
