--- a/T2/SPRINT_3/tfg/src/styles/map.css
+++ b/T2/SPRINT_3/tfg/src/styles/map.css
@@ -1,9 +1,20 @@
 /* Estilos generales del mapa */
 .leaflet-container {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
+}
+
+/* Contenedor del mapa */
+.map-wrapper {
+    width: 80%;
+    height: 700px;
+    margin: 20px auto;
+    border: 3px solid #45C4B0;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* Personalización del Popup */
